<resources>
    <string name="app_name">CVOR</string>
    <string name="app_toolbar_title">Welcome to CVOR</string>
    <string name="app_slogan">CVOR - Making your data secure</string>
    <string name="add_watermark_button">Add Watermark and Share File</string>
    <string name="combine_pdfs_button">Combine PDFs</string>
    <string name="convert_to_pdf_button">Convert Images to PDF</string>
    <string name="whatsnew">Whats New</string>
    <string name="flash_toggle">Flash ON</string>
    <string name="capture_image">Take Photo</string>
    <string name="retake_image">Retake the photo</string>
    <string name="confirm_image">Confirm photo</string>
    <string name="camera_preview">Camera preview</string>
    <string name="camera_source">Camera</string>
    <string name="select_file_source">Select file</string>
    <string name="camera_icon_desc">Camera icon</string>
    <string name="file_manager_icon_desc">File Manager icon</string>
    <string name="file_name">File Name</string>
    <string name="share_history">Share history</string>
    <string name="settings">Settings</string>
    <string name="sharing_with">Sharing with</string>
    <string name="purpose">Purpose</string>
    <string name="watermark_text">Watermark to be added</string>
    <string name="preview">Preview</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="capture_more_images">Capture more images?</string>
    <string name="combine_pdf">Combine PDFs</string>
    <string name="convert_to_pdf">Convert to PDF</string>
    <string name="delete_icon">Delete icon</string>
    <string name="pdf_icon">PDF icon</string>
    <string name="image_icon">Image icon</string>
    <string name="preview_desc">Preview of processed file</string>
    <string name="back_button">Back</string>
    <string name="share_button">Share</string>
</resources>