<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <!-- Camera Preview Area -->

    <androidx.camera.view.PreviewView
        android:id="@+id/cameraPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" >

    </androidx.camera.view.PreviewView>

    <!-- Overlay for Camera Controls -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:layout_gravity="bottom"
        android:layout_margin="0dp"
        android:background="#EF1F1E1E"
        android:orientation="horizontal"
        android:padding="0dp">

        <!-- Flash Toggle Button -->

        <!-- Capture Button -->

        <!-- Retake Button -->
        <ImageButton
            android:id="@+id/buttonRetake"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/retake_image"
            android:src="@drawable/camera_retake"
            android:visibility="gone"
            app:tint="@android:color/white" />

        <ImageButton
            android:id="@+id/buttonCapture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/capture_image"
            android:src="@drawable/camera_capture"
            app:tint="@android:color/white" />

        <ImageButton
            android:id="@+id/buttonConfirm"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/confirm_image"
            android:src="@drawable/camera_confirm"
            android:visibility="gone"
            app:tint="@color/white" />

        <!-- Confirm Button -->
    </LinearLayout>

    <!-- Back Button (Top Left) -->
    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="top|start"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/go_back"
        android:src="@drawable/camera_go_back"
        android:visibility="visible"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/buttonFlashToggle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="top|end"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/flash_toggle"
        android:src="@drawable/camera_flash_on"
        app:tint="@android:color/white" />
</FrameLayout>
